--- a/bike-finder/research-product-knowledge/index.html
+++ b/bike-finder/research-product-knowledge/index.html
@@ -225,7 +225,7 @@
     <ul>
         <li>
             <strong>Buyer Big Questions</strong>
-            <p>Why they want a bike? Which bike will be sufficient enough for them? What does the bike spec mean? Which bikes fit within their budget?</p>
+            <p>Why they want a bike? Which bike will be sufficient enough for them? What does the bike spec mean? Which bikes fit within their budget? What's the return/warranty policy</p>
         </li>
         <li>
             <strong>Buyer Priority</strong>
