--- a/bike-finder/user-story-analysis/index.html
+++ b/bike-finder/user-story-analysis/index.html
@@ -8,5 +8,40 @@
 <body>
     <h1>User Story Analaysis</h1>
     <a href="https://docs.google.com/spreadsheets/d/10_V-Rp4lgSBki_Ha-fIV19oR2B3D9M2OKNlwcJ4BVMk/edit?usp=sharing">google sheet</a>
+    <p>
+        Each user story is categorized by action and goal- what is the goal of the user and what action do they need to do. In addition, the user stories are scored based on the priority of the action/goal to the user, how common the needs were, and how achievable were each goal on a scale of 1-3 (3- very important and 1- not very important). The mean of the three scores were taken to determine the importance of each user story. 
+    </p>
+    <p>I then created 4 graphs
+    </p>
+    <p>
+        Graph 1: each persona to goal category to find out which was the most important to each persona.
+        Graph 2: which goal was scored the highest amongst all the personas
+        Graph 1: each persona to action category to find out which was the most important to each persona.
+        Graph 2: which action was scored the highest amongst all the personas
+    </p>
+    <p>
+        Result 1: 
+        BMXer -> portability, spec, speed
+        fitness + family senior -> spec + budget
+        middle age -> budget + maintenance
+        parent + child -> affordability + budget
+        teen -> spec, adaptability, durability, optimization, purpose
+    </p>
+    <p>
+        Result 2: 
+        maintenance, optimization, spec
+    </p>
+    <p>
+        Result 2: 
+        BMXer -> durability
+        fitness + family senior -> height + stability
+        middle age -> accessories, maintenance, sort
+        parent + child -> adjustable, filter, spec
+        teen -> spec, budget, durability, review, policies
+    </p>
+    <p>
+        Result 3: 
+        aesthetic, price, maintenance, spec, speed, weight
+    </p>
 </body>
 </html>
