--- a/bike-finder/feature-ideation/index.html
+++ b/bike-finder/feature-ideation/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feature Ideation</title>
 </head>
+
 <body>
     <h1>Feature Ideation</h1>
-    
+    <p>
+        Identify possible UI solutions to address the stories. Not necessarily 1-for-1, just let the stories suggest ideas for components. A menu. A big photo. A search bar. An expanding drawer. Sometimes a single component such as a checkbox is enough. Sometimes you may end up with a set of components that work together, such as a search-field, search button, and results list. Keep an eye out for solutions that address more than one story/need, or that can be enhanced to address additional needs. For instance, a basic search bar might be enhanced with an 'auto-suggest' feature.
+
+        Organize your solutions into pages, or views. What views need to exist? What responsibilities does each view
+        have?
+
+    </p>
+
+    <h3>UI Solutions</h3>
+    <ul>
+        <li>
+            filter, multiple choice, checkbox
+        </li>
+        <li>
+            expanding drawer
+        </li>
+        <li>
+            search bar
+        </li>
+        <li>
+            auto suggest, quiz
+        </li>
+        <li>
+            sort by
+        </li>
+        <li>
+            buttons: more info, buy, learn more, shop now
+        </li>
+        <li>
+            tabs
+        </li>
+        <li>
+            image gallery
+        </li>
+        
+    </ul>
+
+    <h3>Views</h3>
+    <ul>
+        <li>
+            product page, purpose, intent, price breakdown
+        </li>
+        <li>
+            home page
+        </li>
+        <li>
+            quiz
+        </li>
+        <li>
+            support
+        </li>
+        <li>
+            review
+        </li>
+        <li>
+            build your own bike
+        </li>
+        <li>
+            checkout
+        </li>
+        <li>
+            suggested
+        </li>
+        <li>
+            policies (warranty and return)
+        </li>
+        <li>
+            accessories, bike, maintenance
+        </li>
+        <li>
+            educational page (blog-like, articles)
+        </li>
+    </ul>
+
 </body>
+
 </html>
