--- a/bike-finder/user-story-analysis/index.html
+++ b/bike-finder/user-story-analysis/index.html
@@ -32,7 +32,7 @@
     <p>BMXer -> portability, spec, speed
     </p>
     <p>
-        fitness + family senior -> spec + budget
+        family senior -> spec + budget
     </p>
     <p>
         middle age -> budget + maintenance
