--- a/bike-finder/feature-ideation/index.html
+++ b/bike-finder/feature-ideation/index.html
@@ -9,13 +9,6 @@
 
 <body>
     <h1>Feature Ideation</h1>
-    <p>
-        Identify possible UI solutions to address the stories. Not necessarily 1-for-1, just let the stories suggest ideas for components. A menu. A big photo. A search bar. An expanding drawer. Sometimes a single component such as a checkbox is enough. Sometimes you may end up with a set of components that work together, such as a search-field, search button, and results list. Keep an eye out for solutions that address more than one story/need, or that can be enhanced to address additional needs. For instance, a basic search bar might be enhanced with an 'auto-suggest' feature.
-
-        Organize your solutions into pages, or views. What views need to exist? What responsibilities does each view
-        have?
-
-    </p>
 
     <h3>UI Solutions</h3>
     <ul>
@@ -42,6 +35,9 @@
         </li>
         <li>
             image gallery
+        </li>
+        <li>
+            cards, image, name, details, price
         </li>
         
     </ul>
