--- a/soccer-league-app/interview-combined/index.html
+++ b/soccer-league-app/interview-combined/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interview Prep</title>
+    <title>Interview Notes</title>
 </head>
 <body>
-    <h1>Interview Prep: Player</h1>
+    <h1>Interview Notes</h1>
     <a href="https://docs.google.com/document/d/1Fdn8KPZ1zPcFAGkFqDJv-BFfIXz_m-ZRR4qECgzkvOQ/edit?usp=sharing">google doc</a>
 </body>
 </html>
